Fix landscape scaling on iPhone and maybe other mobile browsers

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,3 +1,11 @@
+html {
+    // fix landscape text scaling
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
+
 a, h1, h2, h3, h4, h5, h6, body {
     color: $text-color;
 }
